@@ -377,12 +377,6 @@ Disabling this will make your node to require more RAM, but may be necessary for
 <td class="cfg_info"> How many block down the chain to look for calculating the current average transaction fee.</td>
 </tr>
 <tr class="odd">
-<td class="cfg_name"> Stat.BSizeBlks</td>
-<td class="cfg_type"> uint</td>
-<td> 72</td>
-<td class="cfg_info"> How many block down the chain to look for calculating the current average block size.</td>
-</tr>
-<tr class="odd">
 <td class="cfg_name"> Stat.NoCounters</td>
 <td class="cfg_type"> bool</td>
 <td> false</td>
