@@ -5,6 +5,8 @@
 * Wallet: New commands "-encrypt" and "-decrypt", for encrypting and decrypting files with wallet's seed (password)
 * Client: Upgraded "lib/others/memory" to the latest from "gitlab.com/cznic/memory"
 * Client: fixed a bug that causing a chain sync to abort with series of "bad-txnmrklroot" errors
+* Client: Removed config value "CFG.Stat.BSizeBlks" (replaced with constant 2016)
+* Client: "CFG.Net.MaxBlockAtOnce" is used in a smarter way (during initial sync)
 
 1.10.1 - 2022-06-15                                                   
 * btc.VerifyKeyPair() alos does Schnorr sign/verify on the given key pair
